@@ -613,15 +613,17 @@ struct SPDat_Spell_Struct
 /* 174 */   int			EndurUpkeep;
 /* 175 */ int spacing175;
 /* 176 */ int numhits;
-/* 177 */   int			pvpresistbase;
-/* 178 */   int			pvpresistcalc;
-/* 179 */   int			pvpresistcap;
-/* 180 */   int			spell_category;
+/* 177 */ int pvpresistbase;
+/* 178 */ int pvpresistcalc;
+/* 179 */ int pvpresistcap;
+/* 180 */ int spell_category;
 /* 181 */ int spacing181[4];
-/* 185 */   int			can_mgb;	// 0=no, -1 or 1 = yes
+/* 185 */ int can_mgb;	// 0=no, -1 or 1 = yes
 /* 186 */ int dispel_flag;
-/* 192 */   int			NimbusEffect;
-/* 212 */   bool		AllowRest;
+/* 192 */ int NimbusEffect;
+/* 195 */ float directional_start;
+/* 196 */ float directional_end;
+/* 212 */ bool AllowRest;
 
 
 //shared memory errors
